--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.14.1",
+    "react-spring": "^9.7.2",
     "reactstrap": "^9.2.0"
   },
   "devDependencies": {
